1.0:
	Navigate to websites
	Basic bookmark-support

1.1:
	Strip strings before displaying it (bookmarks)

1.1.2
	Bug: str.replace only returns value, so nothing is changed

1.2
	Now other protocols than http and https work. (file:// for example)
	Migrated to jQuery
	Back and forward buttons
	Auto reload
	Ability to switch between mobile and desktop user agent
	Now there’s a loading icon, so the user knows that something is happening. Also option to search instead.
	A couple of bug fixes.
	Now theres a first-startup-page, and a fake protocol, "local://", that lets the user view the page.

1.3
	Bug fixes
	Facebook and github now works
	New icons and design
	Added bottom bar:
		Button to navigate to the options page
		Zoom slider
		Button to open current page in browser tab
	Added options page:
		Ability to switch search engine
		Ability to switch between four themes
		Go to help page
		Clear history
	  
development version (1.4):
	Changed settings on the options page weren't applied if the sidebar wasn't open.