@@ -19,13 +19,10 @@
 				<div class="col">
 					<h3>Search engine:</h3>
 				</div>
-				<div class="col">
-					<select id="search-engine">
-						<option value="google">Google Search</option>
-						<option value="bing">Bing</option>
-						<option value="yahoo">Yahoo!</option>
-						<option value="duckDuckGo">DuckDuckGo</option>
-					</select>
+				<div class="col search-engine-col">
+					<select id="search-engine"></select>
+					<h4 id="delete-engine">Delete</h4>
+					<h4 id="edit-engine">Edit</h4>
 				</div>
 			</div>
 
